Added JWT authentication and caching for requests